--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Appelsiner i turbanen</title>
+
+    <link rel="stylesheet" href="style/style.css">
+</head>
+<body>
+    <div class="wrapper">
+        <div id="div-game">
+            <div id="button-wrapper"></div>
+        </div>
+        <div id="div-chat" class="controls-wrapper">
+            <ul id="events"></ul>
+            <div class="controls">
+                <div class="chat-wrapper">
+                    <form id="chat-form">
+                        <input id="chat" autocomplete="off" title="chat"/>
+                        <button id="say" class="chat-button">Say</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <!-- <script src="libraries/p5.sound.js" type="text/javascript"></script> -->
@@ -10,10 +31,7 @@
     <script src="src/sketch.js" type="text/javascript"></script>
     <script src="src/turban.js" type="text/javascript"></script>
     <script src="src/appelsin.js" type="text/javascript"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="src/client.js" type="text/javascript"></script>
-
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-</head>
-<body>
 </body>
 </html>
